# obsidian-rag-mcp

./: .env.example  .gitignore  .obsidian-rag.yaml.example  AGENTS.md  ARCHITECTURE.md  CONVENTIONS.md  DOMAIN_GLOSSARY.md  Dockerfile  LICENSE  PLAN_004.md  README.md  SKILL.md  docker-compose.yml  healthcheck.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_vault_root_and_indexes.py  003_add_vaults_table.py  004_drop_kind_column.py  005_add_document_chunks.py  006_add_chunk_token_fields.py  007_rename_custom_metadata_to_inline_fields.py  008_add_ingest_lock_columns.py
docs/: chunking.md  environment-variables.md  librechat-mcp-client.md
docs/fastmcp/: changelog.md  download_docs.sh  quickstart.md  updates.md
docs/fastmcp/apps/: low-level.md  overview.md  patterns.md  prefab.md
docs/fastmcp/cli/: auth.md  client.md  generate-cli.md  inspecting.md  install-mcp.md  overview.md  running.md
docs/fastmcp/clients/: client.md  elicitation.md  logging.md  notifications.md  progress.md  prompts.md  resources.md  roots.md  sampling.md  tasks.md  tools.md  transports.md
docs/fastmcp/deployment/: http.md  prefect-horizon.md  running-server.md  server-configuration.md
docs/fastmcp/development/: contributing.md  releases.md  tests.md
docs/fastmcp/getting-started/: installation.md  quickstart.md  welcome.md
docs/fastmcp/integrations/: anthropic.md  auth0.md  authkit.md  aws-cognito.md  azure.md  chatgpt.md  claude-code.md  claude-desktop.md  cursor.md  descope.md  discord.md  eunomia-authorization.md  fastapi.md  gemini-cli.md  gemini.md  github.md  google.md  goose.md  mcp-json-configuration.md  oci.md  openai.md  openapi.md  permit.md  propelauth.md  scalekit.md  supabase.md  workos.md
docs/fastmcp/patterns/: contrib.md
docs/fastmcp/python-sdk/: fastmcp-cli-__init__.md  fastmcp-cli-auth.md  fastmcp-cli-cimd.md  fastmcp-cli-cli.md  fastmcp-cli-client.md  fastmcp-cli-discovery.md  fastmcp-cli-generate.md  fastmcp-cli-install-__init__.md  fastmcp-cli-install-claude_code.md  fastmcp-cli-install-claude_desktop.md  fastmcp-cli-install-cursor.md  fastmcp-cli-install-gemini_cli.md  fastmcp-cli-install-goose.md  fastmcp-cli-install-mcp_json.md  fastmcp-cli-install-shared.md  fastmcp-cli-install-stdio.md  fastmcp-cli-run.md  fastmcp-cli-tasks.md  fastmcp-client-__init__.md  fastmcp-client-auth-__init__.md  fastmcp-client-auth-bearer.md  fastmcp-client-auth-oauth.md  fastmcp-client-client.md  (+196 more)
obsidian_rag/: .bandit  __init__.py  chunking.py  cli.py  cli_commands.py  cli_dates.py  cli_ingest.py  cli_query_exact.py  cli_vault_commands.py  config.py  config_env.py  config_models.py  config_validators.py  reranking.py  tokenizer.py
obsidian_rag/database/: __init__.py  engine.py  models.py
obsidian_rag/llm/: __init__.py  base.py  base.pyi  providers.py
obsidian_rag/mcp_server/: __init__.py  __main__.py  document_tools.py  handlers.py  ingest_helpers.py  ingest_tracker.py  middleware.py  models.py  output_file.py  server.py  session_manager.py  tool_definitions.py  vault_tools.py
obsidian_rag/parsing/: __init__.py  body_tags.py  frontmatter.py  scanner.py  tasks.py
obsidian_rag/services/: __init__.py  ingestion.py  ingestion_chunks.py  ingestion_cleanup.py  ingestion_integrity.py  ingestion_lock.py  ingestion_models.py  tag_merging.py
stubs/: __init__.pyi
stubs/fastmcp/: __init__.pyi
stubs/flashrank/: __init__.pyi
stubs/langchain_huggingface/: __init__.pyi
stubs/litellm/: __init__.pyi
stubs/pgvector/: __init__.pyi  sqlalchemy.pyi
stubs/tiktoken/: __init__.pyi
tests/: conftest.py  test_alembic_migrations.py  test_backward_compatibility_properties.py  test_chunk_search_integration.py  test_chunking.py  test_chunking_integration.py  test_chunking_token_based.py  test_cli.py  test_cli_base.py  test_cli_chunk_query.py  test_cli_commands_exact.py  test_cli_commands_properties.py  test_cli_dates.py  test_cli_exact_integration.py  test_cli_functions.py  test_cli_ingest.py  test_cli_ingest_force.py  test_cli_ingest_lock.py  test_cli_integration.py  test_cli_query.py  test_cli_query_exact_properties.py  test_cli_tasks.py  test_cli_tasks_tags.py  test_cli_type_guards.py  test_cli_vault.py  test_cli_vault_ingest_status_display.py  test_cli_vault_list_get.py  test_cli_vault_update_delete.py  test_config.py  test_config_chunking.py  test_config_coverage.py  test_config_ingest_lock.py  test_config_loading.py  test_config_settings.py  test_config_validators.py  test_database_engine.py  test_database_engine_postgres.py  test_database_models.py  test_database_models_chunks.py  test_database_models_postgres.py  (+40 more)
tests/alembic/: test_migration_006.py  test_migration_007_rename_custom_metadata.py  test_migration_008_ingest_lock_columns.py  test_migration_downgrade_chain.py
tests/mcp_server/: __init__.py  test_document_tools.py  test_document_tools_include_content.py  test_document_tools_output_file.py  test_documents_chunk_option.py  test_documents_chunks.py  test_documents_params.py  test_documents_type_guards.py  test_get_tasks_inline_filters_integration.py  test_get_tasks_integration.py  test_handlers.py  test_handlers_include_content.py  test_handlers_include_content_pass.py  test_handlers_ingest_lock.py  test_handlers_json_serialization.py  test_handlers_tasks.py  test_handlers_vaults.py  test_ingest_helpers.py  test_ingest_helpers_b324.py  test_ingest_incremental_integration.py  test_ingest_tracker.py  test_integration.py  test_integration_validation.py  test_main.py  test_middleware.py  test_models.py  test_models_properties_include_content.py  test_models_task_properties_include_content.py  test_models_task_response_inline_fields.py  test_output_file.py  test_output_file_error.py  test_output_file_local_integration.py  test_output_file_models.py  test_output_file_region_integration.py  test_output_file_region_probe.py  test_output_file_s3_integration.py  test_output_file_uuid_serialization.py  test_properties_include_content_integration.py  test_server.py  test_server_core.py  (+62 more)
tests/utils/: mock_helpers.py  test_mock_helpers.py
(+62 files in other folders)
