[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-rag"
version = "0.6.3"
description = "CLI tool for ingesting Obsidian markdown documents into PostgreSQL with vector embeddings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.2.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "fastmcp>=3.0.0",
    "starlette>=0.36.0",
]

[tool.setuptools]
packages = ["obsidian_rag", "obsidian_rag.database", "obsidian_rag.llm", "obsidian_rag.parsing", "obsidian_rag.mcp_server"]

[project.optional-dependencies]
openai = ["litellm>=1.0.0"]
local = ["langchain>=0.1.0", "langchain-huggingface>=0.0.1"]
all = ["litellm>=1.0.0", "langchain>=0.1.0", "langchain-huggingface>=0.0.1"]

[project.scripts]
obsidian-rag = "obsidian_rag.cli:main"

[dependency-groups]
dev = [
    "bandit[baseline,toml]>=1.8.6",
    "coverage>=7.10.3",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
    "litellm>=1.0.0",
    "langchain>=0.1.0",
    "langchain-huggingface>=0.0.1",
]

[tool.ruff]
include = ["obsidian_rag/**/*.py"]
exclude = ["temporal-samples-python"]

[tool.ruff.lint]
select = [
    "A002",   # Argument shadows python built-in
    "ANN001", # Missing type annotation for argument
    "ANN201", # Missing return type annotation
    "ANN401", # Disallow use of typing.Any
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
    "F841",   # Unused local variable
    "RUF006", # Store reference to asyncio.create_task return
    "TC002",  # Move third-party import into type-checking block
    "FAST",   # FastAPI-specific errors
    "D417",   # Missing argument description in docstring
    "C",      # McCabe complexity check
    "PLR0913" # Too many arguments
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*" = ["ANN", "D", "I", "DTZ", "COM812", "PERF401", "PLC0415", "ARG001", "PLR0913", "INP001", "E501"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["obsidian_rag"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "except ImportError",
    "ImportError",
]
