[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-rag"
version = "0.13.0"
description = "CLI tool for ingesting Obsidian markdown documents into PostgreSQL with vector embeddings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.2.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "fastmcp>=3.0.0",
    "starlette>=0.36.0",
    "litellm>=1.0.0",
    "langchain>=0.1.0",
    "langchain-huggingface>=0.0.1",
]

[tool.setuptools]
packages = ["obsidian_rag", "obsidian_rag.database", "obsidian_rag.llm", "obsidian_rag.parsing", "obsidian_rag.mcp_server"]

[project.optional-dependencies]
openai = ["litellm>=1.0.0"]
local = ["langchain>=0.1.0", "langchain-huggingface>=0.0.1"]
all = ["litellm>=1.0.0", "langchain>=0.1.0", "langchain-huggingface>=0.0.1"]

[project.scripts]
obsidian-rag = "obsidian_rag.cli:main"

[dependency-groups]
dev = [
    "bandit[baseline,toml]>=1.8.6",
    "coverage>=7.10.3",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
    "mypy>=1.19.1",
    "pytest-mypy>=1.0.1",
    "types-pyyaml>=6.0.12.20250915",
    "types-python-dateutil>=2.9.0.20260305",
]

[tool.ruff]
include = ["obsidian_rag/**/*.py"]
exclude = ["temporal-samples-python"]

[tool.ruff.lint]
select = [
    "A002",   # Argument shadows python built-in
    "ANN001", # Missing type annotation for argument
    "ANN201", # Missing return type annotation
    "ANN401", # Disallow use of typing.Any
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
    "F841",   # Unused local variable
    "RUF006", # Store reference to asyncio.create_task return
    "TC002",  # Move third-party import into type-checking block
    "FAST",   # FastAPI-specific errors
    "D417",   # Missing argument description in docstring
    "C",      # McCabe complexity check
    "PLR0913",# Too many arguments
    "I001",   # Import sorting (isort)
    "COM812", # Missing trailing comma
    "UP035",  # Deprecated typing imports
    "PIE790", # Unnecessary placeholder (pass)
    "RET505", # Superfluous else/return
    "ANN003", # Missing **kwargs type annotation
    "B904",   # Raise without from clause
    "FBT001", # Boolean positional arg in function def
    "FBT003", # Boolean positional value in call
    "UP007",  # Use X | Y for Union
    "UP045",  # Use X | None for Optional
    "F401",   # Unused imports
    "SIM110", # Use any/all instead of loop
    "TC006",  # Unquoted type expression in cast()
    "BLE001", # Blind except: except Exception
    "F541",   # F-string without placeholders
    "DTZ007", # Naive datetime from strptime
    "PLR2004",# Magic value comparison
]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*" = ["ANN", "D", "I", "DTZ", "COM812", "PERF401", "PLC0415", "ARG001", "PLR0913", "INP001", "E501"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["obsidian_rag"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "except ImportError",
    "ImportError",
]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pgvector.sqlalchemy"
ignore_missing_imports = true
